# mosaic-openrpsee

./: .gitlab-ci.yml  Cargo.toml  flake.nix  rust-toolchain.toml
derive/: Cargo.toml
derive/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
openrpsee/: Cargo.toml
openrpsee/examples/: simple.rs
openrpsee/src/: lib.rs
