[package]
name = "mosaic-openrpsee-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2", features = ["full", "derive", "extra-traits", "parsing"] }
unescape = "0.1.0"
