[package]
name = "openrpsee-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2", features = ["full", "derive", "extra-traits", "parsing"] }
unescape = "0.1.0"
