[package]
name = "mosaic-openrpsee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mosaic-openrpsee-derive = { path = "../derive" }
schemars = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
jsonrpsee = { version = "0.25", features = ["macros", "server"] }
schemars = { version = "1", features = ["derive"] }
